@@ -136,6 +136,10 @@ public class CompetitionStandingsByGroupListAdapter
 			viewHolder.teamPoints = (TextView) rowView.findViewById(R.id.row_competition_team_table_pts);
 			viewHolder.rowDivider = (View) rowView.findViewById(R.id.row_competition_standings_row_divider);
 			viewHolder.transparentDivider = (View) rowView.findViewById(R.id.row_competition_standings_divider_transparent);
+			viewHolder.dividerContainer = (RelativeLayout) rowView.findViewById(R.id.divider_container_team_standings);
+			
+			viewHolder.rowContainer.setBackgroundColor(activity.getResources().getColor(R.color.white));
+			viewHolder.dividerContainer.setBackgroundColor(activity.getResources().getColor(R.color.white));
 
 			rowView.setTag(viewHolder);
 		}
@@ -176,9 +180,9 @@ public class CompetitionStandingsByGroupListAdapter
 				holder.headerContainer.setVisibility(View.GONE);
 			}
 				
-			String teamGPAsString = new Integer(element.getMatches()).toString();
-			String teamPlusMinusAsString = new Integer(element.getGoalsForMinusGoalsAgainst()).toString();
-			String teamPointsAsString = new Integer(element.getPoints()).toString();
+			String teamGPAsString = Integer.valueOf(element.getMatches()).toString();
+			String teamPlusMinusAsString = Integer.valueOf(element.getGoalsForMinusGoalsAgainst()).toString();
+			String teamPointsAsString = Integer.valueOf(element.getPoints()).toString();
 
 			holder.teamGP.setText(teamGPAsString);
 			holder.teamPlusMinus.setText(teamPlusMinusAsString);
@@ -256,5 +260,6 @@ public class CompetitionStandingsByGroupListAdapter
 		private TextView teamPoints;
 		private View rowDivider;
 		private View transparentDivider;
+		private RelativeLayout dividerContainer;
 	}
 }
